kubernetes-advance/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  selector:
    matchLabels:
      app: example-app
      env: prod
  template:
    metadata:
      labels:
        app: example-app
        env: prod
    spec:
      containers:
      - name: example-app
        image: lareeth/demo:latest

        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000

        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "250Mi"
            cpu: "200m"
